Pwauth Change Log
=================

VERSION 2.3.9 - 
  - Minor documentation fixes

VERSION 2.3.8 - Apr 3, 2009
  - Undefining SERVER_UIDS now disables the runtime uid check.  Documentation
    added to suggest using this, together with group execution permissions on
    the binary, to create a group for users who can run pwauth.  Thanks to
    Adi Kriegisch <adi@kriegisch.at> for suggesting this.
  - Return a distinct status code if authentication fails because we are not
    running as root.  This is currently only done for SHADOW_SUN, SHADOW_BSD,
    SHADOW_AIX, and SHADOW_MDW.  It's just to help confused installers
    figure out why things aren't working.
  - Warn installers that they may need to install PAM development packages.

VERSION 2.3.7 - Jan 9, 2009
  - DOCUMENTATION FIX ONLY
  - Corrected erroneous AuthBasicProvider command in INSTALL file.

VERSION 2.3.6 - May 19, 2008
  - Add PAM_OS_X option.
  - Clarified comments in config.h.
  - Replace wildly obsolete inclusion of strings.h with inclusion of string.h

VERSION 2.3.5 - Dec 17, 2007
  - Fixed return codes from AIX and HPUX versions (thanks to Paul Marvin for
    finding this bug).

VERSION 2.3.4 - Nov 11, 2007
  - Fixed PAM_SOLARIS define.

VERSION 2.3.3 - Sep 1, 2007
  - Don't allow logins during inactive period after password expiration.

VERSION 2.3.2 - Feb 19, 2006
  - Update documentation to discuss usage with mod_authnz_external.
  - Update documentation to discuss use of mod_authz_unixgroup instead of the
    unixgroup script.
  - Drop "development release" notation.

VERSION 2.3.1 - Jan 10, 2005
  - Fix the checks for expired passwords and expired accounts for
    LOGIN_CONF_OPENBSD configurations.
  - Fix the handling of the pam_message argument to the conversation function
    for Solaris.  The old handling was right for Linux PAM and OpenPAM, but
    not for Solaris.  However, the bug occurs only when the PAM modules passes